--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -76,8 +76,11 @@ bind a choose-tree -Zs
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'dracula/tmux'
+
+
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -91,8 +94,15 @@ set -g @sidebar-tree-command 'exa --icons -F -h -a --group-directories-first --g
 set -g @sidebar-tree-width '15' # FIXME: doesn't work 
 set -g @sidebar-tree-pager 'view -'
 
-set -g @plugin 'tmux-plugins/tmux-battery' 
-set -g @catppuccin_status_modules_right "application session date_time battery"
-set -g @catppuccin_date_time_text "%H:%M"
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @dracula-plugins "time ram-usage battery"
+set -g @dracula-cpu-usage-colors "pink dark_gray"
 
-run '~/.tmux/plugins/tpm/tpm'
+set -g @dracula-show-timezone false
+set -g @dracula-day-month true
+
+set -g @dracula-time-format "%c"
+#set -g @catppuccin_status_modules_right "application session date_time battery"
+#set -g @catppuccin_date_time_text "%H:%M"
+
+run '~/.tmux/plugins/tpm/tpm
